--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vicsystems_consulting",
+  "name": "vickyconsults",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "flowbite": "^3.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -19,7 +20,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
